fix node package vulnerabilities

--- a/ambassador/todo-app-green/todo-ui/package.json
+++ b/ambassador/todo-app-green/todo-ui/package.json
@@ -9,13 +9,13 @@
     "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "moment": "^2.19.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^2.1.1",
     "react-select": "^1.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
@@ -32,12 +32,12 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chromedriver": "^2.34.1",
     "jasmine-spec-reporter": "^4.2.1",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.18.8",
     "protractor": "^5.2.2",
     "rimraf": "^2.6.2"
   },
